--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
             "email": "nathan@atmoz.org"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "classmap": ["includes/"]
+    }
 }
